[package]
name = "grafana-tempo-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.19.0", features = ["rt-tokio-current-thread"] }
anyhow = "1.0.71"
chrono = "0.4"
futures = "0.3.25"
ipnet = "2.7.1"
lazy_static = "1.4.0"
libloading = "0.8.0"
nix = "0.26.1"
opentelemetry-otlp = { version = "0.12.0", features = [
    "reqwest-client",
    "reqwest-rustls",
    "http-proto",
] }
prost = "0.11.7"
quinn = "0.9.3"
quinn-proto = "0.9.3"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = "0.20.8"
socket2 = "0.5.1"
tokio = { version = "1.24.2", features = ["macros"] }
tokio-metrics = "0.2.2"
tokio-stream = "0.1.11"
tonic = { version = "0.8.3" }
tower = "0.4.13"
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
